--- a/blocks/header/__search-line/header__search-line.css
+++ b/blocks/header/__search-line/header__search-line.css
@@ -6,4 +6,7 @@
   border-right: 1.5px solid var(--form-grey); */
   border-radius: 8px 0 0 8px;
   padding-left: 25px;
+  outline: none;
+  /* outline: 0.5px solid var(--green);
+  outline-offset: -5px; */
 }
