feat: "plus section, adaptive"

--- a/blocks/slider/slider.css
+++ b/blocks/slider/slider.css
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   /* align-items: center; */
   align-items: flex-start;
+  min-width: 899px;
   width: 899px;
   height: 439px;
   border-radius: 1px;
