--- a/blocks/collection/__container/_small/_bookcase/collection__container_small_bookcase.css
+++ b/blocks/collection/__container/_small/_bookcase/collection__container_small_bookcase.css
@@ -1,3 +1,4 @@
 .collection__container_small_bookcase {
   background-image: url("../../../../../images/collection/bookcase.png");
+  grid-area: second;
 }
