--- a/blocks/trending/__cards/trending__cards.css
+++ b/blocks/trending/__cards/trending__cards.css
@@ -1,6 +1,6 @@
 .trending__cards {
   flex-wrap: wrap;
-  min-width: 1047px;
+  /* min-width: 1047px; */
   max-width: 1174px;
   width: 81.39vw;
   justify-content: space-between;
