--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,10 @@
 @import "../vendor/fonts/fonts.css";
 /* Blocks */
 @import "../blocks/page/page.css";
+/* Link */
+@import "../blocks/link/link.css";
+@import "../blocks/link/_active/link_active.css";
+@import "../blocks/links/links.css";
 /* Button */
 @import "../blocks/button/button.css";
 /* Flex */
@@ -44,11 +48,14 @@
 /* Prev */
 @import "../blocks/prev/prev.css";
 @import "../blocks/prev/__table/prev__table.css";
+@import "../blocks/prev/__table/_disabled/prev__table_disabled.css";
 @import "../blocks/prev/__list/prev__list.css";
 @import "../blocks/prev/__str/prev__str.css";
 @import "../blocks/prev/__win/prev__win.css";
 @import "../blocks/prev/__link/prev__link.css";
 @import "../blocks/prev/__container/prev__container.css";
+@import "../blocks/prev/__container/_justify/prev__container_justify.css";
+
 /* Slider */
 @import "../blocks/slider/slider.css";
 @import "../blocks/slider/__gr-title/slider__gr-title.css";
@@ -67,6 +74,7 @@
 @import "../blocks/slider/__round/slider__round.css";
 @import "../blocks/slider/__round/_active/slider__round_active.css";
 @import "../blocks/slider/__strip/slider__strip.css";
+@import "../blocks/slider/__main/slider__main.css";
 /* Nav */
 @import "../blocks/nav/nav.css";
 @import "../blocks/nav/__sort/nav__sort.css";
@@ -76,7 +84,8 @@
 @import "../blocks/nav/__list/nav__list.css";
 @import "../blocks/nav/__link/nav__link.css";
 @import "../blocks/nav/__nav/nav__nav.css";
-/* Nav */
+@import "../blocks/nav/__menu/nav__menu.css";
+/* Plus */
 @import "../blocks/plus/plus.css";
 @import "../blocks/plus/__card/plus__card.css";
 @import "../blocks/plus/__img/plus__img.css";
@@ -109,6 +118,7 @@
 @import "../blocks/trending/__gr-img/trending__gr-img.css";
 @import "../blocks/trending/__gr-discount/trending__gr-discount.css";
 @import "../blocks/trending/__gr-discount/_green/trending__gr-discount_green.css";
+@import "../blocks/trending/__gr-discount/_red/trending__gr-discount_red.css";
 @import "../blocks/trending/__discount-text/trending__discount-text.css";
 @import "../blocks/trending/__text/trending__text.css";
 @import "../blocks/trending/__subtitle/trending__subtitle.css";
@@ -117,7 +127,7 @@
 @import "../blocks/trending/__price-grey/trending__price-grey.css";
 @import "../blocks/trending/__gr-stars/trending__gr-stars.css";
 @import "../blocks/trending/__star/trending__star.css";
-@import "../blocks/trending/__star-inactive/trending__star-inactive.css";
+@import "../blocks/trending/__star/_inactive/trending__star_inactive.css";
 @import "../blocks/trending/__gr-btn/trending__gr-btn.css";
 @import "../blocks/trending/__btn/trending__btn.css";
 @import "../blocks/trending/__btn-img/trending__btn-img.css";
@@ -145,6 +155,28 @@
 @import "../blocks/offer/__price-gr/offer__price-gr.css";
 @import "../blocks/offer/__main-title/offer__main-title.css";
 /* @import "../blocks/offer/__/offer__.css"; */
+
+/* Products */
+@import "../blocks/products/products.css";
+@import "../blocks/products/__title/products__title.css";
+@import "../blocks/products/__links/products__links.css";
+@import "../blocks/products/__link/products__link.css";
+@import "../blocks/products/__link/_active/products__link_active.css";
+@import "../blocks/products/__card/products__card.css";
+@import "../blocks/products/__cards/products__cards.css";
+@import "../blocks/products/__btn-line/products__btn-line.css";
+@import "../blocks/products/__btn-next/products__btn-next.css";
+@import "../blocks/products/__btn-next-arr/products__btn-next-arr.css";
+@import "../blocks/products/__gr-btn-counter/products__gr-btn-counter.css";
+@import "../blocks/products/__btn-text/products__btn-text.css";
+@import "../blocks/products/__counter/products__counter.css";
+@import "../blocks/products/__btn-text-change/products__btn-text-change.css";
+@import "../blocks/products/__gr-btn/products__gr-btn.css";
+@import "../blocks/products/__btn/products__btn.css";
+@import "../blocks/products/__btn-left/products__btn-left.css";
+@import "../blocks/products/__btn-arr-img/products__btn-arr-img.css";
+@import "../blocks/products/__btn-right/products__btn-right.css";
+/* @import "../blocks/products/__/products__.css"; */
 
 /* Footer */
 @import "../blocks/footer/footer.css";
