--- a/blocks/nav/__links/nav__links.css
+++ b/blocks/nav/__links/nav__links.css
@@ -1,7 +1,10 @@
 .nav__links {
+  max-width: 506px;
+  width: 55%;
   list-style: none;
   display: flex;
   margin: 0;
   padding: 0;
-  gap: 65px;
+  /* gap: 65px; */
+  justify-content: space-between;
 }
