--- a/blocks/trending/__links/trending__links.css
+++ b/blocks/trending/__links/trending__links.css
@@ -1,7 +1,3 @@
 .trending__links {
-  display: flex;
-  gap: 70px;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 28px;
+  max-width: 572px;
 }
