--- a/blocks/collection/__container/_big/collection__container_big.css
+++ b/blocks/collection/__container/_big/collection__container_big.css
@@ -3,6 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 669px;
+  min-height: 511px;
   /* width: 46.46vw; */
   /* width: 44.46vw;
   min-width: 200px;
