--- a/blocks/collection/collection.css
+++ b/blocks/collection/collection.css
@@ -8,7 +8,7 @@
   grid-template-areas:
     "first second"
     "first third";
-  height: 511px;
+  /* height: 511px; */
   row-gap: 17px;
   column-gap: 18px;
   align-content: space-between;
@@ -17,4 +17,19 @@
   max-width: 1174px;
   justify-self: center;
   overflow: hidden;
+
+  /* grid-template-columns: repeat(auto-fit, minmax(271px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(247px, 2fr)); */
+}
+
+/* 702 */
+@media screen and (max-width: 800px) {
+  .collection {
+    grid-template-columns: 81.39vw;
+    grid-template-rows: 2fr 1fr 1fr;
+    grid-template-areas:
+      "first"
+      "second"
+      "third";
+  }
 }
