--- a/blocks/offer/__card/offer__card.css
+++ b/blocks/offer/__card/offer__card.css
@@ -3,7 +3,9 @@
   background-image: url("../../../images/offer/Offer1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  max-width: 570px;
+  /* max-width: 570px;
+  min-width: 271px; */
+  width: 100%;
   height: 247px;
   box-sizing: border-box;
   padding: 28px 0 29px 24px;
