--- a/blocks/trending/__cards/trending__cards.css
+++ b/blocks/trending/__cards/trending__cards.css
@@ -1,10 +1,18 @@
 .trending__cards {
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   /* min-width: 1047px; */
-  max-width: 1174px;
+  /* max-width: 1174px;
+  width: 81.39vw; */
+  /* justify-content: center; */
+  /* justify-content: space-around;
+  column-gap: 30px;
+  row-gap: 45px; */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 270px);
+  /* gap: 30px; */
   width: 81.39vw;
   /* justify-content: center; */
   justify-content: space-around;
-  column-gap: 30px;
   row-gap: 45px;
+  max-width: 1174px;
 }
